objects/Offers__c.object
<CustomObject>
    <description>Business Unit: HELMS.
Jira Story: LMS-1950 Story name.
Description: This is store Opportunity Offers.
Source System: Coming from Integration.
Integration: Yes.
Data Transformation: N/A.
Functional Definition: This will be Stored Opportunity Offers.</description>
    <fields>
        <fullName>AK_Opportunity_Offer__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-1950 Story name.
Description: This is store AK Opportunity Offer.
Source System: Coming from Integration.
Integration: Yes.
Data Transformation: N/A.
Functional Definition: This will be Stored AK Opportunity Offer.</description>
        <label>AK Opportunity Offer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-1950 Story name.
Description: This is store the End Date.
Source System: Coming from Integration.
Integration: Yes.
Data Transformation: N/A.
Functional Definition: This will be Stored Offers End Date.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_ID__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-1950 Story name.
Description: This is store the Offer ID.
Source System: Coming from Integration.
Integration: Yes.
Data Transformation: N/A.
Functional Definition: This will be Stored Offers ID.</description>
        <label>Offer ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-1950 Story name.
Description: This is store the Offer Type.
Source System: Coming from Integration.
Integration: Yes.
Data Transformation: N/A.
Functional Definition: This will be Stored Offers Type.</description>
        <label>Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Unit: HELMS.
Jira Story: LMS-1950 Story name.
Description: This is store the Opportunity ID.
Source System: Coming from Integration.
Integration: Yes.
Data Transformation: N/A.
Functional Definition: This will be Stored Opportunity ID.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Description__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-1950 Story name.
Description: This is store the Special Description.
Source System: Coming from Integration.
Integration: Yes.
Data Transformation: N/A.
Functional Definition: This will be Stored Special Description.</description>
        <label>Special Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Short_Description__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-1950 Story name.
Description: This is store the Special Short Description.
Source System: Coming from Integration.
Integration: Yes.
Data Transformation: N/A.
Functional Definition: This will be Stored Special Short Description.</description>
        <label>Special Short Description</label>
        <type>TextArea</type>
    </fields>
    <label>Opportunity Offers</label>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Offers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>